--- a/src/main/webapp/admin/reset_all.html
+++ b/src/main/webapp/admin/reset_all.html
@@ -36,10 +36,10 @@
         <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
 
         <!-- RSVP -->
-        <script src="../js/vendor/rsvp.min.js"></script>
+        <script src="../js/third_party/rsvp.min.js"></script>
 
         <!-- Lo-Dash -->
-        <script src="../js/vendor/lodash.min.js"></script>
+        <script src="../js/third_party/lodash.min.js"></script>
 
         <!-- Custom JavaScript -->
         <script src="../js/reset_all.js"></script>
