--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,13 +42,13 @@
         <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
 
         <!-- RSVP -->
-        <script src="js/vendor/rsvp.min.js"></script>
+        <script src="js/third_party/rsvp.min.js"></script>
 
         <!-- GeoFire -->
-        <script src="js/vendor/geofire.min.js"></script>
+        <script src="js/third_party/geofire.min.js"></script>
 
         <!-- Lo-Dash -->
-        <script src="js/vendor/lodash.min.js"></script>
+        <script src="js/third_party/lodash.min.js"></script>
 
         <!-- Custom JavaScript -->
         <script src="js/trainEgress.js"></script>
