--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
     <head>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 
-        <title>Nearby train station Locations With GeoFire 2.0</title>
+        <title>Nearby train station Locations With GeoFire</title>
 
         <!-- STYLESHEETS -->
         <link href="css/animate.min.css" rel="stylesheet">
